force-app/main/default/objects/Account/fields/testfield1__c.field-meta.xml
<CustomField>
    <fullName>testfield1__c</fullName>
    <label>testfield1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>