force-app/main/default/objects/Account/fields/testfield2__c.field-meta.xml
<CustomField>
    <fullName>testfield2__c</fullName>
    <label>testfield2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>