force-app/main/default/objects/Account/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <label>testfield</label>
    <length>18</length>
    <type>Text</type>
</CustomField>